seal some classes