@@ -5,7 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.time.LocalDate;
 import java.time.Month;
-import java.util.Collections;
 import java.util.List;
 
 import javax.validation.Validation;
@@ -14,7 +13,8 @@ import javax.validation.Validator;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
-import no.nav.foreldrepenger.mottak.domain.foreldrepenger.fordeling.LukketPeriodeMedVedlegg;
+import no.nav.foreldrepenger.mottak.domain.foreldrepenger.fordeling.OppholdsPeriode;
+import no.nav.foreldrepenger.mottak.domain.foreldrepenger.fordeling.Oppholdsårsak;
 
 class LukketPeriodeMedVedleggValidatorTest {
 
@@ -27,25 +27,22 @@ class LukketPeriodeMedVedleggValidatorTest {
 
     @Test
     void testOKEnDag() {
-        var periode = new LukketPeriodeMedVedlegg(LocalDate.of(2019, Month.MARCH, 1),
-                LocalDate.of(2019, Month.MARCH, 1), Collections.emptyList()) {
-        };
+        var periode = new OppholdsPeriode(LocalDate.of(2019, Month.MARCH, 1),
+                LocalDate.of(2019, Month.MARCH, 1), Oppholdsårsak.INGEN, List.of());
         assertTrue(validator.validate(periode).isEmpty());
     }
 
     @Test
     void testNullStart() {
-        var periode = new LukketPeriodeMedVedlegg(null,
-                LocalDate.of(2019, Month.MARCH, 3), Collections.emptyList()) {
-        };
+        var periode = new OppholdsPeriode(null,
+                LocalDate.of(2019, Month.MARCH, 3), Oppholdsårsak.INGEN, List.of());
         assertFalse(validator.validate(periode).isEmpty());
     }
 
     @Test
     void testNullEnd() {
-        var periode = new LukketPeriodeMedVedlegg(LocalDate.of(2019, Month.MARCH, 3), null,
-                List.of()) {
-        };
+        var periode = new OppholdsPeriode(LocalDate.of(2019, Month.MARCH, 3), null, Oppholdsårsak.INGEN,
+                List.of());
         assertFalse(validator.validate(periode).isEmpty());
     }
 
